fix: mobile buttons overflow

--- a/src/styles/Calculator/Keyboard.css
+++ b/src/styles/Calculator/Keyboard.css
@@ -1,5 +1,4 @@
 .keyboard {
-  height: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 
